--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
+# Node modules
 node_modules/
+
+# SQLite database
+*.sqlite
+
+# Environment files
 .env
+
+# Logs
+*.log
+
+# Backups
+*.bak
+
+# Sistema operativo
+.DS_Store
+Thumbs.db
