--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@sendinblue/client": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemailer": "^6.10.0",
     "sqlite3": "^5.1.7"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
